--- a/www/index.html
+++ b/www/index.html
@@ -71,10 +71,10 @@
     <script src="app/project/rock-unit.controller.js"></script>
     <script src="app/project/rock-units.controller.js"></script>
     <script src="app/project/tools.controller.js"></script>
-    <script src="app/remote-connection/login.controller.js"></script>
     <script src="app/remote-connection/sync-modal.controller.js"></script>
     <script src="app/spot/spot.controller.js"></script>
     <script src="app/spot/spots.controller.js"></script>
+    <script src="app/user/login.controller.js"></script>
     <script src="app/user/user.controller.js"></script>
 
     <!-- ng spot tab controllers -->
