--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,8 @@
     <script src="app/spot/links-tab.controller.js"></script>
     <script src="app/spot/images-tab.controller.js"></script>
     <script src="app/spot/orientation-tab.controller.js"></script>
+    <script src="app/spot/orientation2-tab.controller.js"></script>
+    <script src="app/spot/orientation-form.controller.js"></script>
     <script src="app/spot/sample-tab.controller.js"></script>
     <script src="app/spot/spot-tab.controller.js"></script>
 
