add ability to modify orientation data

--- a/www/app/project/rock-unit.html
+++ b/www/app/project/rock-unit.html
@@ -4,7 +4,7 @@
       <button ng-hide='vm.currentSpot' ng-click='vm.goToRockUnits();'
               class='button button-icon icon ion-arrow-left-c'></button>
       <button ng-show='vm.currentSpot' ng-click='vm.returnToSpot();'
-              class='button button-icon icon ion-close-round'></button>
+              class='button button-icon icon ion-arrow-left-c'></button>
     </ion-nav-buttons>
     <ion-nav-buttons side='right'>
       <button ng-hide='vm.currentSpot' ng-click='vm.deleteRockUnit();'
