--- a/www/app/spot/orientation.html
+++ b/www/app/spot/orientation.html
@@ -3,7 +3,7 @@
     <ion-nav-title>{{ vm.title }}</ion-nav-title>
     <ion-nav-buttons side='left'>
       <button ng-click='vm.returnToSpot();'
-              class='button button-icon icon ion-close-round'></button>
+              class='button button-icon icon ion-arrow-left-c'></button>
     </ion-nav-buttons>
     <ion-nav-buttons side='right'>
       <button ng-hide='vm.currentSpot' ng-click='vm.deleteRockUnit();'
