--- a/www/app/spot/orientation-data-tab.html
+++ b/www/app/spot/orientation-data-tab.html
@@ -25,18 +25,12 @@
             <span ng-if='orientation.orientation_type === "tabular_zone_orientation"' class='orientation-text'>
               {{ orientationIndex+1 }}: Measured Tabular Zone</span>
           <br>
-          <span ng-if='orientation.line_trend'>Trend: {{ orientation.line_trend }}</span>
-          <span ng-if='orientation.planar_strike'>Strike: {{ orientation.planar_strike }}</span>
-          <span ng-if='orientation.tabular_zone_strike'>Strike: {{ orientation.tabular_zone_strike }}</span>
-          <span ng-if='orientation.planar_dip_direction'>Dip Direction: {{ orientation.planar_dip_direction }}</span>
-          <span ng-if='orientation.tabular_zone_dip_dir'>Dip Direction: {{ orientation.tabular_zone_dip_dir }}</span>
-          <span ng-if='orientation.line_plunge'>Plunge: {{ orientation.line_plunge }}</span>
-          <span ng-if='orientation.planar_dip'>Dip: {{ orientation.planar_dip }}</span>
-          <span ng-if='orientation.tabular_zone_dip'>Dip: {{ orientation.tabular_zone_dip }}</span>
-          <span ng-if='orientation.line_feat'>Feature Type: {{ orientation.line_feat }}</span>
-          <span ng-if='orientation.planar_feature_type'>Feature Type: {{ orientation.planar_feature_type }}</span>
-            <span
-              ng-if='orientation.tabular_zone_tab_feature'>Feature Type: {{ orientation.tabular_zone_tab_feature }}</span>
+          <span ng-if='orientation.strike'>Strike: {{ orientation.strike }}</span>
+          <span ng-if='orientation.dip_direction'>Dip Direction: {{ orientation.dip_direction }}</span>
+          <span ng-if='orientation.dip'>Dip: {{ orientation.dip }}</span>
+          <span ng-if='orientation.trend'>Trend: {{ orientation.trend }}</span>
+          <span ng-if='orientation.plunge'>Plunge: {{ orientation.plunge }}</span>
+          <span ng-if='orientation.feature_type'>Feature Type: {{ orientation.feature_type }}</span>
         </div>
         <div class=" item-button-right">
           <button class='button button-clear button-dark' ng-click='vmChild.deleteOrientation(orientationIndex)'>
@@ -55,20 +49,13 @@
                       class='orientation-text'>
                   Associated Measured Tabular Zone</span>
               <br>
-              <span ng-if='associated_orientation.line_trend'>Trend: {{ associated_orientation.line_trend }}</span>
-                <span
-                  ng-if='associated_orientation.planar_strike'>Strike: {{ associated_orientation.planar_strike }}</span>
-              <span ng-if='associated_orientation.tabular_zone_strike'>Strike: {{ associated_orientation.tabular_zone_strike }}</span>
-              <span ng-if='associated_orientation.planar_dip_direction'>Dip Direction: {{ associated_orientation.planar_dip_direction }}</span>
-              <span ng-if='associated_orientation.tabular_zone_dip_dir'>Dip Direction: {{ associated_orientation.tabular_zone_dip_dir }}</span>
-              <span ng-if='associated_orientation.line_plunge'>Plunge: {{ associated_orientation.line_plunge }}</span>
-              <span ng-if='associated_orientation.planar_dip'>Dip: {{ associated_orientation.planar_dip }}</span>
-                <span
-                  ng-if='associated_orientation.tabular_zone_dip'>Dip: {{ associated_orientation.tabular_zone_dip }}</span>
-                <span
-                  ng-if='associated_orientation.line_feat'>Feature Type: {{ associated_orientation.line_feat }}</span>
-              <span ng-if='associated_orientation.planar_feature_type'>Feature Type: {{ associated_orientation.planar_feature_type }}</span>
-              <span ng-if='associated_orientation.tabular_zone_tab_feature'>Feature Type: {{ associated_orientation.tabular_zone_tab_feature }}</span>
+              <span ng-if='associated_orientation.strike'>Strike: {{ associated_orientation.strike }}</span>
+              <span ng-if='associated_orientation.dip_direction'>Dip Direction: {{ associated_orientation.dip_direction }}</span>
+              <span ng-if='associated_orientation.dip'>Dip: {{ associated_orientation.dip }}</span>
+              <span ng-if='associated_orientation.trend'>Trend: {{ associated_orientation.trend }}</span>
+              <span ng-if='associated_orientation.plunge'>Plunge: {{ associated_orientation.plunge }}</span>
+              <span
+                ng-if='associated_orientation.feature_type'>Feature Type: {{ associated_orientation.feature_type }}</span>
             </div>
             <div class=" item-button-right">
               <button class='button button-clear button-dark'
