save changes automatically instead of save button

--- a/www/app/map/map.html
+++ b/www/app/map/map.html
@@ -1,11 +1,15 @@
 <ion-view title=''>
   <ion-nav-buttons side='left'>
-    <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
+    <button ng-hide='vm.currentSpot' menu-toggle='left'
+            class='button button-icon icon ion-navicon'></button>
+    <button ng-show='vm.currentSpot' ng-click='vm.returnToSpot();'
+            class='button button-icon icon ion-arrow-left-c'></button>
     </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button ng-click='vm.toggleLocation()'
+    <button ng-hide='vm.currentSpot' ng-click='vm.toggleLocation()'
             ng-class='{"button button-icon icon ion-pinpoint": !vm.locationOn, "button button-icon icon ion-android-locate": vm.locationOn}'></button>
-    <button ng-click='vm.showActionsheet()' class='button button-icon icon ion-arrow-up-b'></button>
+    <button ng-hide='vm.currentSpot' ng-click='vm.showActionsheet()'
+            class='button button-icon icon ion-arrow-up-b'></button>
     <div ng-class='{"online": vm.isOnline(), "offline": !vm.isOnline()}'></div>
     </ion-nav-buttons>
   <ion-pane data-tap-disabled='true'>
