--- a/www/app/project/daily-setup.html
+++ b/www/app/project/daily-setup.html
@@ -1,14 +1,7 @@
 <ion-view title='Daily Setup'>
   <ion-nav-buttons side='left'>
-    <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side='right'>
-    <div ng-if='vm.pristine || !vm.valid'>
-      <button class='button disabled button-icon icon ion-checkmark-circled'></button>
-    </div>
-    <div ng-if='!vm.pristine && vm.valid'>
-      <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
-    </div>
+    <button menu-toggle='left' ng-click='vm.submit();'
+            class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-content class='has-header padding'>
     What do we want to setup daily?
