--- a/www/app/project/project.html
+++ b/www/app/project/project.html
@@ -1,18 +1,10 @@
 <form name='straboForm' novalidate=''>
   <ion-view title='Project Description'>
   <ion-nav-buttons side='left'>
-    <button ng-hide='vm.isNewProject' menu-toggle='left'
+    <button ng-hide='vm.isNewProject' menu-toggle='left' ng-click='vm.submit();'
             class='button button-icon icon ion-navicon'></button>
     <button ng-show='vm.isNewProject' ng-click='vm.goToProjects()'
             class='button button-icon icon ion-arrow-left-c'></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side='right'>
-    <div ng-if='vm.pristine || !vm.valid'>
-      <button class='button disabled button-icon icon ion-checkmark-circled'></button>
-    </div>
-    <div ng-if='!vm.pristine && vm.valid'>
-      <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
-    </div>
   </ion-nav-buttons>
   <ion-content class='has-header'>
     <auto-fields/>
