--- a/www/app/project/rock-unit.html
+++ b/www/app/project/rock-unit.html
@@ -1,20 +1,14 @@
 <form name='straboForm' novalidate=''>
   <ion-view title='Rock Unit Description'>
     <ion-nav-buttons side='left'>
-      <button ng-hide='vm.currentSpot' ng-click='vm.goToRockUnits();'
+      <button ng-hide='vm.currentSpot' ng-click='vm.submit("/app/rock-units");'
               class='button button-icon icon ion-arrow-left-c'></button>
-      <button ng-show='vm.currentSpot' ng-click='vm.returnToSpot();'
+      <button ng-show='vm.currentSpot' ng-click='vm.submit("/spotTab/" + vm.currentSpot.properties.id + "/spot");'
               class='button button-icon icon ion-arrow-left-c'></button>
     </ion-nav-buttons>
     <ion-nav-buttons side='right'>
       <button ng-hide='vm.currentSpot' ng-click='vm.deleteRockUnit();'
               class='button button-icon icon ion-trash-b'></button>
-      <div ng-if='vm.pristine'>
-        <button class='button disabled button-icon icon ion-checkmark-circled'></button>
-      </div>
-      <div ng-if='!vm.pristine'>
-        <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
-      </div>
     </ion-nav-buttons>
     <ion-content class='has-header'>
       <auto-fields/>
