--- a/www/app/user/user.html
+++ b/www/app/user/user.html
@@ -1,14 +1,6 @@
 <ion-view title='User Profile'>
   <ion-nav-buttons side='left'>
-    <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side='right'>
-    <div ng-if='vm.data && !vm.pristine'>
-      <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
-    </div>
-    <div ng-if='vm.data && vm.pristine'>
-      <button class='button disabled button-icon icon ion-checkmark-circled'></button>
-    </div>
+    <button menu-toggle='left' ng-click='vm.submit();' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
     <h6 ng-show='vm.data.email'>You are currently logged in as: {{ vm.data.email }}</h6>
