trace/line feature to trace feature

--- a/www/app/spot/spot-tab.html
+++ b/www/app/spot/spot-tab.html
@@ -115,7 +115,7 @@
 
       <div ng-show='vm.showTrace'>
         <div class='item item-divider'>
-          Trace/Line Feature
+          Trace Feature
         </div>
         <div>
           <auto-fields/>
