add delete icon back to spot header

--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -12,6 +12,7 @@ navigation history that also transitions its views in and out.
     <button ng-click='vm.submit("app/spots");' class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
+    <button ng-click='vm.deleteSpot();' class='button button-icon icon ion-trash-b'></button>
     <button ng-click='vm.showActionsheet();' class='button button-icon icon ion-arrow-up-b'></button>
   </ion-nav-buttons>
 </ion-nav-bar>
