--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -9,7 +9,7 @@ navigation history that also transitions its views in and out.
   </ion-nav-back-button> -->
   <ion-nav-title>{{ vm.spotTitle }}</ion-nav-title>
   <ion-nav-buttons side='left'>
-    <button ng-click='vm.submit("app/spots");' class='button button-icon icon ion-arrow-left-c'></button>
+    <button ng-click='vm.goBack();' class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
     <button ng-click='vm.deleteSpot();' class='button button-icon icon ion-trash-b'></button>
