localForage now uses sqLite Driver

--- a/www/index.html
+++ b/www/index.html
@@ -16,10 +16,6 @@
     <!-- ngMessages -->
     <script src="lib/angular-messages.js"></script>
 
-    <!-- localforage -->
-    <script src="lib/localforage.js"></script>
-    <script src="lib/angular-localForage.js"></script>
-
     <!-- Papa Parse (csv to json) -->
     <script src="lib/papaparse.min.js"></script>
 
@@ -43,6 +39,10 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <!-- local storage with localForage and SQLite Driver -->
+    <script src="lib/localforage/dist/localforage.js"></script>
+    <script src="lib/localforage-cordovasqlitedriver/src/localforage-cordovasqlitedriver.js"></script>
 
     <!-- Stylesheets -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
